// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Integration > Feature #1470: Custom brands > should by handled accordingly 1`] = `
"/** post /v1/custom */
type PostV1CustomInput = {
  string: boolean;
  regular: string;
};

/** post /v1/custom */
type PostV1CustomPositiveVariant1 = {
  number: boolean;
};

/** post /v1/custom */
type PostV1CustomNegativeVariant1 = {
  message: string;
};

export type Path = "/v1/custom";

export type Method = "get" | "post" | "put" | "delete" | "patch" | "head";

export interface Input {
  "post /v1/custom": PostV1CustomInput;
}

export interface PositiveResponse {
  "post /v1/custom": PostV1CustomPositiveVariant1;
}

export interface NegativeResponse {
  "post /v1/custom": PostV1CustomNegativeVariant1;
}

export interface EncodedResponse {
  "post /v1/custom":
    | [200, PostV1CustomPositiveVariant1]
    | [400, PostV1CustomNegativeVariant1];
}

export type Request = keyof Input;
"
`;

exports[`Integration > Should support HEAD method by default 0 1`] = `
"/** get /v1/path */
type GetV1PathInput = {
  some: string;
};

/** get /v1/path */
type GetV1PathPositiveVariant1 = {};

/** get /v1/path */
type GetV1PathNegativeVariant1 = {
  message: string;
};

/** head /v1/path */
type HeadV1PathInput = {
  some: string;
};

/** head /v1/path */
type HeadV1PathPositiveVariant1 = undefined;

/** head /v1/path */
type HeadV1PathNegativeVariant1 = undefined;

export type Path = "/v1/path";

export type Method = "get" | "post" | "put" | "delete" | "patch" | "head";

export interface Input {
  "get /v1/path": GetV1PathInput;
  "head /v1/path": HeadV1PathInput;
}

export interface PositiveResponse {
  "get /v1/path": GetV1PathPositiveVariant1;
  "head /v1/path": HeadV1PathPositiveVariant1;
}

export interface NegativeResponse {
  "get /v1/path": GetV1PathNegativeVariant1;
  "head /v1/path": HeadV1PathNegativeVariant1;
}

export interface EncodedResponse {
  "get /v1/path":
    | [200, GetV1PathPositiveVariant1]
    | [400, GetV1PathNegativeVariant1];
  "head /v1/path":
    | [200, HeadV1PathPositiveVariant1]
    | [400, HeadV1PathNegativeVariant1];
}

export type Request = keyof Input;
"
`;

exports[`Integration > Should support HEAD method by default 1 1`] = `
"/** get /v1/path */
type GetV1PathInput = {
  some: string;
};

/** get /v1/path */
type GetV1PathPositiveVariant1 = {};

/** get /v1/path */
type GetV1PathNegativeVariant1 = {
  message: string;
};

export type Path = "/v1/path";

export type Method = "get" | "post" | "put" | "delete" | "patch" | "head";

export interface Input {
  "get /v1/path": GetV1PathInput;
}

export interface PositiveResponse {
  "get /v1/path": GetV1PathPositiveVariant1;
}

export interface NegativeResponse {
  "get /v1/path": GetV1PathNegativeVariant1;
}

export interface EncodedResponse {
  "get /v1/path":
    | [200, GetV1PathPositiveVariant1]
    | [400, GetV1PathNegativeVariant1];
}

export type Request = keyof Input;
"
`;

exports[`Integration > Should support multiple response schemas depending on status code 1`] = `
"/** post /v1/mtpl */
type PostV1MtplInput = {
  test: number;
};

/** post /v1/mtpl */
type PostV1MtplPositiveVariant1 = {
  status: "ok";
  data: {
    payload: string;
  };
};

/** post /v1/mtpl */
type PostV1MtplPositiveVariant2 = {
  status: "kinda";
  data: {
    payload: string;
  };
};

/** post /v1/mtpl */
type PostV1MtplNegativeVariant1 = "error";

/** post /v1/mtpl */
type PostV1MtplNegativeVariant2 = "failure";

export type Path = "/v1/mtpl";

export type Method = "get" | "post" | "put" | "delete" | "patch" | "head";

export interface Input {
  "post /v1/mtpl": PostV1MtplInput;
}

export interface PositiveResponse {
  "post /v1/mtpl": PostV1MtplPositiveVariant1 | PostV1MtplPositiveVariant2;
}

export interface NegativeResponse {
  "post /v1/mtpl": PostV1MtplNegativeVariant1 | PostV1MtplNegativeVariant2;
}

export interface EncodedResponse {
  "post /v1/mtpl":
    | [200, PostV1MtplPositiveVariant1]
    | [201, PostV1MtplPositiveVariant2]
    | [400, PostV1MtplNegativeVariant1]
    | [500, PostV1MtplNegativeVariant2];
}

export type Request = keyof Input;
"
`;

exports[`Integration > Should support types variant and handle recursive schemas 0 1`] = `
"type Type1 = {
    name: string;
    features: Type1;
};

/** post /v1/test */
type PostV1TestInput = {
    features: Type1;
};

/** post /v1/test */
type PostV1TestPositiveVariant1 = {};

/** post /v1/test */
type PostV1TestNegativeVariant1 = {
    message: string;
};

export type Path = "/v1/test";

export type Method = "get" | "post" | "put" | "delete" | "patch" | "head";

export interface Input {
    /** @deprecated */
    "post /v1/test": PostV1TestInput;
}

export interface PositiveResponse {
    /** @deprecated */
    "post /v1/test": PostV1TestPositiveVariant1;
}

export interface NegativeResponse {
    /** @deprecated */
    "post /v1/test": PostV1TestNegativeVariant1;
}

export interface EncodedResponse {
    /** @deprecated */
    "post /v1/test": [
        200,
        PostV1TestPositiveVariant1
    ] | [
        400,
        PostV1TestNegativeVariant1
    ];
}

export type Request = keyof Input;"
`;

exports[`Integration > Should support types variant and handle recursive schemas 1 1`] = `
"type Type1 = {
    name: string;
    features: Type1;
};

/** post /v1/test */
type PostV1TestInput = {
    features: Type1;
};

/** post /v1/test */
type PostV1TestPositiveVariant1 = {};

/** post /v1/test */
type PostV1TestNegativeVariant1 = {
    message: string;
};

export type Path = "/v1/test";

export type Method = "get" | "post" | "put" | "delete" | "patch" | "head";

export interface Input {
    /** @deprecated */
    "post /v1/test": PostV1TestInput;
}

export interface PositiveResponse {
    /** @deprecated */
    "post /v1/test": PostV1TestPositiveVariant1;
}

export interface NegativeResponse {
    /** @deprecated */
    "post /v1/test": PostV1TestNegativeVariant1;
}

export interface EncodedResponse {
    /** @deprecated */
    "post /v1/test": [
        200,
        PostV1TestPositiveVariant1
    ] | [
        400,
        PostV1TestNegativeVariant1
    ];
}

export type Request = keyof Input;"
`;

exports[`Integration > Should treat optionals the same way as z.infer() by default 1`] = `
"/** post /v1/test-with-dashes */
type PostV1TestWithDashesInput = {
  opt?: string | undefined;
};

/** post /v1/test-with-dashes */
type PostV1TestWithDashesPositiveVariant1 = {
  similar?: number | undefined;
};

/** post /v1/test-with-dashes */
type PostV1TestWithDashesNegativeVariant1 = {
  message: string;
};

export type Path = "/v1/test-with-dashes";

export type Method = "get" | "post" | "put" | "delete" | "patch" | "head";

export interface Input {
  "post /v1/test-with-dashes": PostV1TestWithDashesInput;
}

export interface PositiveResponse {
  "post /v1/test-with-dashes": PostV1TestWithDashesPositiveVariant1;
}

export interface NegativeResponse {
  "post /v1/test-with-dashes": PostV1TestWithDashesNegativeVariant1;
}

export interface EncodedResponse {
  "post /v1/test-with-dashes":
    | [200, PostV1TestWithDashesPositiveVariant1]
    | [400, PostV1TestWithDashesNegativeVariant1];
}

export type Request = keyof Input;

export const endpointTags = { "post /v1/test-with-dashes": [] };

const parseRequest = (request: string) =>
  request.split(/ (.+)/, 2) as [Method, Path];

const substitute = (path: string, params: Record<string, any>) => {
  const rest = { ...params };
  for (const key in params) {
    path = path.replace(\`:\${key}\`, () => {
      delete rest[key];
      return params[key];
    });
  }
  return [path, rest] as const;
};

export type Implementation<T = unknown> = (
  method: Method,
  path: string,
  params: Record<string, any>,
  ctx?: T,
) => Promise<[number, any]>;

type Pagination =
  | {
      nextCursor: string | null;
    }
  | {
      total: number;
      limit: number;
      offset: number;
    };

const defaultImplementation: Implementation = async (method, path, params) => {
  const hasBody = !["get", "head", "delete"].includes(method);
  const searchParams = hasBody ? "" : \`?\${new URLSearchParams(params)}\`;
  const response = await fetch(
    new URL(\`\${path}\${searchParams}\`, "https://example.com"),
    {
      method: method.toUpperCase(),
      headers: hasBody ? { "Content-Type": "application/json" } : undefined,
      body: hasBody ? JSON.stringify(params) : undefined,
    },
  );
  const contentType = response.headers.get("content-type");
  if (!contentType) return [response.status, undefined];
  const isJSON = contentType.startsWith("application/json");
  const body = await response[isJSON ? "json" : "text"]();
  return [response.status, body];
};

export class Client<T> {
  public constructor(
    protected readonly implementation: Implementation<T> = defaultImplementation,
  ) {}
  public provide<K extends Request>(
    request: K,
    params: Input[K],
    ctx?: T,
  ): Promise<EncodedResponse[K]> {
    const [method, path] = parseRequest(request);
    return this.implementation(
      method,
      ...substitute(path, params),
      ctx,
    ) as Promise<EncodedResponse[K]>;
  }
  public static hasMore(response: Pagination): boolean {
    if ("nextCursor" in response) return response.nextCursor !== null;
    return response.offset + response.limit < response.total;
  }
}

export class Subscription<
  K extends Extract<Request, \`get \${string}\`>,
  R extends Extract<PositiveResponse[K], { event: string }>,
> {
  public source: EventSource;
  public constructor(request: K, params: Input[K]) {
    const [path, rest] = substitute(parseRequest(request)[1], params);
    const searchParams = \`?\${new URLSearchParams(rest)}\`;
    this.source = new EventSource(
      new URL(\`\${path}\${searchParams}\`, "https://example.com"),
    );
  }
  public on<E extends R["event"]>(
    event: E,
    handler: (data: Extract<R, { event: E }>["data"]) => void | Promise<void>,
  ) {
    this.source.addEventListener(event, (msg) =>
      handler(JSON.parse((msg as MessageEvent).data)),
    );
    return this;
  }
}

// Usage example:
/*
const client = new Client();
client.provide("get /v1/user/retrieve", { id: "10" });
new Subscription("get /v1/events/stream", {}).on("time", (time) => {});
*/
"
`;
